@@ -82,7 +82,7 @@ int EXPORT(SetChar) (struct termios *t, ControlChar c, char ch);
 int EXPORT(tcsnow) (void);
 int EXPORT(tcsflush) (void);
 int EXPORT(tcsdrain) (void);
-int doSetUnset (int *bitset, int mask, int value);
+int doSetUnset (unsigned int *bitset, unsigned int mask, int value);
 void _M2_termios_init (void);
 
 
@@ -315,7 +315,7 @@ int EXPORT(tcflowoffo) (int fd)
  *  doSetUnset - applies mask or undoes mask depending upon value.
  */
 
-int doSetUnset (int *bitset, int mask, int value)
+int doSetUnset (unsigned int *bitset, unsigned int mask, int value)
 {
   if (value)
     (*bitset) |= mask;
